<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".RegisterBook">
    <TextView
        android:id="@+id/TVTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IngresaTitulo"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/ETitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Titulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVTitle"/>

    <TextView
        android:id="@+id/TVAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IngresaAutor"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ETitulo"/>
    <EditText
        android:id="@+id/EAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Autor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVAutor"/>

    <TextView
        android:id="@+id/TVPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IngresaPrecio"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EAutor"/>
    <EditText
        android:id="@+id/EPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Precio"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TVPrecio"/>

    <Button
        android:id="@+id/BtnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrar"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EPrecio"
        />


</androidx.constraintlayout.widget.ConstraintLayout>